--- a/templates/locales/en.yml
+++ b/templates/locales/en.yml
@@ -64,6 +64,8 @@ en:
           Puppet Enterprise is already installed, skipping installation.
         scheduling_run: |-
           Scheduling Puppet run to kickstart node classification.
+        starting_foreground_run: |-
+          Starting Puppet run to kickstart node classification.
       detect_installer:
         detect_failed: |-
           The VM "%{name}" could not detect the version of Puppet Enterprise and failed with
